--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <main>
+    <h1>Pokédex</h1>
+    <ul class='pokemon-list'></ul>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script> 
   </body>
 </html>
