--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/index.html">
+      <a class="navbar-brand" href="/simple-js-app/">
         <img src="https://img.icons8.com/office/80/pokedex.png" width="30" height="30" class="d-inline-block align-top" alt="pokedex">
         Bootstrap Pokédex
       </a>
